# vigenere-cipher

./: .gitignore  CMakeLists.txt  a.out  test
pi/: CMakeLists.txt
qrcode/: CMakeLists.txt  main.cpp
vigenere/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  TOOLING.md  alphabet.hpp  encoded.txt  main.cpp  medium-encrypted.txt  segmenter.hpp  short-encrypted.txt  spaceless-encrypted.txt  vigenere.hpp
vigenere/bench/: bench_vigenere.cpp
vigenere/data/: german-encrypted.txt
vigenere/src/: alphabet.hpp  file_io.hpp  language_resources.cpp  language_resources.hpp  main.cpp  segmenter.hpp  vigenere.hpp
vigenere/tests/: test_vigenere.cpp
vigenere/wordlist-de_DE/: README_de_DE.txt  de_DE.txt  frequencies.txt  unigram_freq.txt
vigenere/wordlist-en_US/: README_en_US.txt  frequencies.txt
